--- a/css/nightlight.css
+++ b/css/nightlight.css
@@ -20,6 +20,7 @@ body {
   justify-content: center;
   width: 100%;
   height: 50%;
+  min-height: 400px;
 }
 
 .drop-text {
@@ -93,5 +94,11 @@ a {
 
   .description {
     width: 80%;
+  }
+}
+
+@media only screen and (max-height: 650px) {
+  .footer {
+    display: none;
   }
 }
